WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305793
[ApplePay] Unrecognized payment networks need not always throw exceptions
https://bugs.webkit.org/show_bug.cgi?id=305793
Summary
[ApplePay] Unrecognized payment networks need not always throw exceptions
Abrar Rahman Protyasha
Reported
2026-01-19 14:40:13 PST
rdar://163015780
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-01-19 15:12:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56856
EWS
Comment 2
2026-01-20 12:06:39 PST
Committed
305895@main
(130b88c82e3c): <
https://commits.webkit.org/305895@main
> Reviewed commits have been landed. Closing PR #56856 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug